Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103567

QML MediaPlayer fails to playback rtsp media properly.

XMLWordPrintable

    • Android, Windows
    • 3d07b6fce (tqtc/lts-6.2), 6838d7384 (dev), 6741d2909 (6.5), aad72fc2f (6.4), b4bba1381 (tqtc/lts-6.2)
    • 2022wk46FOQtforAndroid, 2022wk48FOQtforAndroid, 2022wk50FOQtforAndroid

      Qt creator's example mediaplayer application fails to playback rtsp media from Axis P7304 Video Encoder (basically a web camera with rtsp stream). Related bug report for Qt 5.15.6 is here: https://bugreports.qt.io/browse/QTBUG-103565

      In Qt 5.15.6 the videostream with QML MediaPlayer component works in some cases, meaning that the rtsp stream from the encoder is ok and playback to QML MediaPlayer possible, but it has different issues, therefore the separate bug report.

      On Windows, when attempting to playback a video (rtsp://192.168.0.2/axis-media/media.amp), the application fails to show the stream and shows: "Media session serious error". Wireshark plain-text log is attached. It looks like (similarly to the 5.15.6 bug) if authentication is needed, the QML MediaPlayer fails in a different way. Attempting to stream from rtsp://root:root@192.168.0.2/axis-media/media.amp shows error:  "Failed to load source".

      On Android the application gives Error: Unknown error/Insufficient resources

        1. MainActivity.java
          2 kB
          Bartlomiej Moskal
        2. QTBUG-103576-SamsungGalaxyM11.mp4
          12.23 MB
          Bartlomiej Moskal
        3. RTSP-FFMPEG.mp4
          5.66 MB
          Bartlomiej Moskal
        4. rtsp negotiation anonymous Windows Qt6.2.4.log
          4 kB
          Sampo Huttunen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            sampo.huttunen Sampo Huttunen
            Votes:
            3 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: