Windows: Fix RTSP stream playback

Avoids changing the player topology for remote streams. Also improves
handling of error conditions related to network streaming.

Pick-to: 6.3 6.2
Task-number: QTBUG-103567
Change-Id: I358389ed22397c3b15e5971a042e43dc369127f4
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>